--- a/skyfolk/templates/about/publication_detail.html
+++ b/skyfolk/templates/about/publication_detail.html
@@ -15,7 +15,7 @@
             <div class="card-content clearfix grey-text text-darken-2">
               <h4 class="center grey-text text-darken-2"><a href="">{{ object.title|safe|emoji_replace }}</a></h4>
               <div class="divider"></div>
-              <p class="flow-text">{{ object.content|safe|emoji_replace|truncatechars_html:120 }}</p>
+              <p class="flow-text">{{ object.content|safe|emoji_replace }}</p>
               <span class="card-title">
                   {% for tag in object.tags.all %}
                   <span class="chip">
