--- a/skyfolk/templates/groups/comentarios_entries.html
+++ b/skyfolk/templates/groups/comentarios_entries.html
@@ -32,7 +32,7 @@
                                                 </div>
                                             {% endif %}
                                         </h2>
-                                        <p class="blue-text text-darken-2 pub-created">{{ node.created|naturaltime }}</p>
+                                        <p class="blue-text text-darken-2 pub-created">{{ node.created|naturaltime }}{% if node.edition_date %}<i> - Editado</i>{% endif %}</p>
                                         <div class="row publication-content">
                                             <div class="parrafo comment">
                                                 <div class="wrp-comment">{{ node.content|emoji_replace|safe }}</div>
