--- a/skyfolk/static/sass/core.sass
+++ b/skyfolk/static/sass/core.sass
@@ -153,6 +153,12 @@ body > .container
   margin-top: 7em
   margin-bottom: 1em
 
+@media screen and (max-width: 480px)
+  .arrow-up, .arrow-down
+    -ms-transform: scale(0.5, 0.5)
+    -webkit-transform: scale(0.5, 0.5)
+    transform: scale(0.5, 0.5)
+
 @media only screen and (min-width: 641px) and (max-width: 959px)
   body > .container
     margin: 1em
@@ -532,3 +538,25 @@ ul#vertical-menu .userView .background
 
 .pagination li.active
   background-color: #1e88e5 !important
+
+.arrow-up
+  width: 0
+  height: 0
+  border-left: 20px solid transparent
+  border-right: 20px solid transparent
+  border-bottom: 20px solid
+  margin: auto auto 10px auto
+  overflow: hidden
+  cursor: pointer
+  opacity: 0.8
+
+.arrow-down
+  width: 0
+  height: 0
+  border-left: 20px solid transparent
+  border-right: 20px solid transparent
+  border-top: 20px solid
+  margin: 10px auto
+  overflow: hidden
+  cursor: pointer
+  opacity: 0.8
