--- a/skyfolk/templates/about/publication_detail.html
+++ b/skyfolk/templates/about/publication_detail.html
@@ -2,18 +2,32 @@
 {% load static %}
 {% load emoji_tags %}
 {% block head_title %}{{ object.title|truncatechars:20 }}{% endblock %}
+
+{% block extra_head %}
+    <style>
+        .card-content {
+            word-break: break-word;
+        }
+    </style>
+{% endblock %}
+
 {% block menu %}
 {% endblock %}
 {% block content %}
 <div class="container">
     <div class="row center">
-    <a class="btn waves-effect blue" href="{% url "about:blog" %}">Volver al blog</a>
+      <a class="btn waves-effect blue" href="{% url "about:blog" %}">Volver al blog</a>
     </div>
     <div class="row">
     <div class="col s12">
           <div class="card">
             <div class="card-content clearfix grey-text text-darken-2">
-              <h4 class="center grey-text text-darken-2"><a href="">{{ object.title|safe|emoji_replace }}</a></h4>
+              <div class="row">
+                <h4 class="center grey-text text-darken-2"><a href="">{{ object.title|safe|emoji_replace }}</a></h4>
+                <p>
+                  <b class="center">{{ object.created }}</b>
+                </p>
+              </div>
               <div class="divider"></div>
               <p class="flow-text">{{ object.content|safe|emoji_replace }}</p>
               <span class="card-title">
@@ -30,7 +44,6 @@
             </div>
             <div class="card-action">
               <a class="white-text blue btn" href="{% url 'user_profile:profile' object.author.username %}">@{{ object.author.username }}</a>
-                <b class="right">{{ object.created }}</b>
             </div>
           </div>
         </div>
