--- a/skyfolk/templates/about/publications.html
+++ b/skyfolk/templates/about/publications.html
@@ -9,16 +9,25 @@
         }
 
         .grid-item {
-            width: 500px;
+            width: 300px;
             margin-bottom: 10px;
             float: left;
+            background-color: #fff;
+            word-break: break-word;
         }
 
-        .card .card-title {
-            font-size: inherit;
+        .photo-date {
+            display: initial;
         }
-        .active {
-            background-color: #1e88e5 !important;
+
+        .grid-item .img {
+            border-radius: 3px;
+            box-shadow: 0 1px 5px #1e88e5;
+        }
+
+        .grid-item .img > img {
+            width: 100%;
+            height: 100%;
         }
     </style>
     <script src="{% static "js/masonry.pkgd.min.js" %}" type="text/javascript"></script>
@@ -45,7 +54,7 @@
             var $grid = $('.grid').imagesLoaded(function () {
                 $grid.masonry({
                     itemSelector: '.grid-item',
-                    columnWidth: 500,
+                    columnWidth: 300,
                     gutter: 20,
                     fitWidth: true,
                     horizontalOrder: true,
