--- a/skyfolk/templates/account/shared_publication.html
+++ b/skyfolk/templates/account/shared_publication.html
@@ -26,7 +26,7 @@
                 <a href="{% url 'user_profile:profile' shared_publication.author %}">@{{ shared_publication.author }}</a>
             </div>
             <br><br>
-            <p class="blue-text">{{ shared_publication.created|naturaltime }}{% if shared_publication.edition_date %}<i> - Editado</i>{% endif %}</p>
+            <p class="blue-text">{{ shared_publication.created|naturaltime }}{% if shared_publication.edition_date %}<i> - Editado ({{ node.edition_date|naturaltime }})</i>{% endif %}</p>
         </div>
     </div>
     <br/>
