--- a/skyfolk/templates/account/profile_comments.html
+++ b/skyfolk/templates/account/profile_comments.html
@@ -25,7 +25,7 @@
                                         <h2 class="h22"><a
                                                 href="/profile/{{ node.author.username }}">@{{ node.author.username }}</a>
                                         </h2>
-                                        <p class="blue-text text-darken-2 pub-created">{{ node.created|naturaltime }}{% if node.edition_date %}<i> - Editado</i>{% endif %}</p>
+                                        <p class="blue-text text-darken-2 pub-created">{{ node.created|naturaltime }}{% if node.edition_date %}<i> - Editado ({{ node.edition_date|naturaltime }})</i>{% endif %}</p>
                                         <div class="row publication-content">
                                             <div class="parrafo comment">
                                                 <div class="wrp-comment">{{ node.content|safe|emoji_replace }}</div>
