--- a/skyfolk/templates/channels/new_feed_publication.html
+++ b/skyfolk/templates/channels/new_feed_publication.html
@@ -14,7 +14,7 @@
                     href="/profile/{{ item.author.username }}">@{{ item.author.username }}</a><i>{{ item.author.first_name }} {{ item.author.last_name }}</i><span>
                 <span><a href="/publication/{{ item.id }}" title="Ver publicación"><i
                         class="material-icons md-18 right">open_in_new</i></a></span>
-                <p><i class="pub-date">{{ item.created|naturaltime }}{% if item.edition_date %}<i> - Editado</i>{% endif %}</i></p>
+                <p><i class="pub-date">{{ item.created|naturaltime }}{% if item.edition_date %}<i> - Editado ({{ node.edition_date|naturaltime }})</i>{% endif %}</i></p>
         </div>
         <div class="col l9 m10 s9 contenido">
             <p>{{ item.content|safe|emoji_replace }}</p>
@@ -34,7 +34,7 @@
                             {% avatar item.shared_publication.author 60 %}<br>
                             <span class="card-title"><a
                                     href="{% url 'user_profile:profile' item.shared_publication.author %}">@{{ item.shared_publication.author }}</a>
-                            <i class="blue-text text-darken-2"> {{ item.shared_publication.created|naturaltime }}</i>{% if item.shared_publication.edition_date %}<i> - Editado</i>{% endif %}</span>
+                            <i class="blue-text text-darken-2"> {{ item.shared_publication.created|naturaltime }}</i>{% if item.shared_publication.edition_date %}<i> - Editado ({{ node.edition_date|naturaltime }})</i>{% endif %}</span>
                             <p>{{ item.shared_publication.content|safe|emoji_replace }}</p>
                             {% with item.shared_publication.images.all as images %}
                                 {% if images %}<br>
