--- a/skyfolk/templates/channels/new_video_group_publication.html
+++ b/skyfolk/templates/channels/new_video_group_publication.html
@@ -28,7 +28,7 @@
                                 </div>
                             {% endif %}
                         </h2>
-                        <p class="blue-text text-darken-2 pub-created">{{ node.created|naturaltime }}{% if node.edition_date %}<i> - Editado</i>{% endif %}</p>
+                        <p class="blue-text text-darken-2 pub-created">{{ node.created|naturaltime }}{% if node.edition_date %}<i> - Editado ({{ node.edition_date|naturaltime }})</i>{% endif %}</p>
                         <div class="row publication-content">
                             <div class="parrafo comment">
                                 <div class="wrp-comment">{{ node.content|safe|emoji_replace }}</div>
