--- a/skyfolk/templates/groups/board_theme_publications.html
+++ b/skyfolk/templates/groups/board_theme_publications.html
@@ -32,7 +32,7 @@
                         </h2>
                         <div class="row">
                             <div class="parrafo comment">
-                                <p class="blue-text text-darken-2 pub-created">{{ pub.created|naturaltime }}{% if node.edition_date %}<i> - Editado</i>{% endif %}</p>
+                                <p class="blue-text text-darken-2 pub-created">{{ pub.created|naturaltime }}{% if node.edition_date %}<i> - Editado ({{ node.edition_date|naturaltime }})</i>{% endif %}</p>
                                 <div class="wrp-comment">{{ pub.content|safe|emoji_replace }}</div>
                             </div>
                             <div class="show-more" id="show-comment-{{ pub.pk }}">
