Rectangulo en galeria en lugar de cuadrado

--- a/photologue_groups/templates/photologue_groups/photo_gallery.html
+++ b/photologue_groups/templates/photologue_groups/photo_gallery.html
@@ -166,7 +166,7 @@
                 <button type="button" class="waves-effect waves-light btn transparent black-text"
                 data-method="rotate"
                 data-option="-90"
-                title="Rotate -90 degrees">Rotate Left
+                title="Rotate -90 degrees">Girar hacia la izquierda
             </button>
             <button type="button" class="waves-effect waves-light btn transparent black-text"
             data-method="rotate"
@@ -183,7 +183,7 @@
 <button type="button" class="waves-effect waves-light btn transparent black-text"
 data-method="rotate"
 data-option="90"
-title="Rotate 90 degrees">Rotate Right
+title="Rotate 90 degrees">Girar hacia la derecha
 </button>
 <button type="button" class="waves-effect waves-light btn transparent black-text"
 data-method="rotate"
