--- a/skyfolk/templates/account/cf-profile.html
+++ b/skyfolk/templates/account/cf-profile.html
@@ -164,7 +164,7 @@ Para evitar cadenas de texto muy largas (a la hora de mostrar el nombre del fich
                     <button type="button" class="waves-effect waves-light btn transparent black-text"
                         data-method="rotate"
                         data-option="-90"
-                        title="Rotate -90 degrees">Rotate Left
+                        title="Rotate -90 degrees">Girar hacia la izquierda
                     </button>
                     <button type="button" class="waves-effect waves-light btn transparent black-text"
                         data-method="rotate"
@@ -181,7 +181,7 @@ Para evitar cadenas de texto muy largas (a la hora de mostrar el nombre del fich
                     <button type="button" class="waves-effect waves-light btn transparent black-text"
                         data-method="rotate"
                         data-option="90"
-                        title="Rotate 90 degrees">Rotate Right
+                        title="Rotate 90 degrees">Girar hacia la derechaa
                     </button>
                     <button type="button" class="waves-effect waves-light btn transparent black-text"
                         data-method="rotate"
