--- a/skyfolk/templates/account/relations_page.html
+++ b/skyfolk/templates/account/relations_page.html
@@ -34,6 +34,8 @@
     </div>
     {% endcomment %}
         <div class="col l4 s12 z-depth-1-half" style="border-radius: 7px;">
+        {% with item.photos as photos %}
+        {% with item.videos as videos %}
         {% with item.followers as followers %}
             {% with item.n_likes as n_likes %}
                 {% with item.to_profile as user_profile %}
@@ -41,17 +43,24 @@
                 {% endwith %}
             {% endwith %}
         {% endwith %}
+        {% endwith %}
+        {% endwith %}
         </div>
     {% endfor %}
 {% elif followers %}
+    
     {% for item in followers %}
         <div class="col l4 s12 z-depth-1-half" style="border-radius: 7px;">
+        {% with item.photos as photos %}
+        {% with item.videos as videos %}
         {% with item.followers as followers %}
             {% with item.n_likes as n_likes %}
                 {% with item.from_profile as user_profile %}
                     {% include "user_profile/skyfolk-card.html" %}
                 {% endwith %}
             {% endwith %}
+        {% endwith %}
+        {% endwith %}
         {% endwith %}
         </div>
     {% endfor %}
