--- a/user_profile/templates/user_profile/skyfolk-card.html
+++ b/user_profile/templates/user_profile/skyfolk-card.html
@@ -5,7 +5,6 @@ Pin de usuario, donde se muestra avatar, nombre, imagen de perfil (en profile.ht
 {% load avatar_tags %}
 {% load humanize %}
 {% load static %}
-
         <div class="user-card card">
                 <div class="col s12 user-avatar" style="background: {% if user_profile.back_image %}
                     url({{ user_profile.back_image.url }})
@@ -14,57 +13,58 @@ Pin de usuario, donde se muestra avatar, nombre, imagen de perfil (en profile.ht
                     {% endif %} no-repeat center center; background-size: cover;">
                 </div>
             <div class="col s12 user-stats">
-                    <div class="col l2 s4">
+                    <div class="col l3 s4">
                         <div class="tooltipped user-pic-wrapper" data-position="bottom" 
-                            data-tooltip="{% if user_profile.online %} Online {%else%} Offline {% endif %}"
-                            style="{% if user_profile.online %}-webkit-box-shadow: 0 0 5px 0 rgba(70, 241, 118, 0.75);
+                            data-tooltip="{% if item.profile.online %} Online {%else%} Offline {% endif %}"
+                            style="{% if item.profile.online %}-webkit-box-shadow: 0 0 5px 0 rgba(70, 241, 118, 0.75);
                                 -moz-box-shadow: 0 0 5px 0 rgba(70, 241, 118, 0.75);
                                 box-shadow: 0 0 5px 0 rgba(70, 241, 118, 0.75);{% else %}
                                 -webkit-box-shadow: 0 0 5px 0 rgba(255, 99, 71, 0.75);
                                 -moz-box-shadow: 0 0 5px 0 rgba(255, 99, 71, 0.75);
-                                box-shadow: 0 0 5px 0 rgba(255, 99, 71, 0.75);{% endif %}">{% avatar user_profile.user.username css_class="responsive-img" %}</div>
+                                box-shadow: 0 0 5px 0 rgba(255, 99, 71, 0.75);{% endif %}">{% avatar item.profile.user.username css_class="responsive-img" %}</div>
                     </div>
-                    <div class="col l10 s8">
+                    <div class="col l9 s8">
                         <ul class="profile-info">
-                            <li><a id="info-user-name-profile" class="info-user-name" href="{% url "user_profile:profile" user_profile.user.username %}">@{{ user_profile.user.username }}</a> {% if user_profile.first_name or user_profile.last_name %}
-                                ({{ user_profile.user.first_name }} {{ user_profile.user.last_name }}) {% endif %}
+                            <li><a id="info-user-name-profile" class="info-user-name" href="{% url "user_profile:profile" item.profile.user.username %}">@{{ item.profile.user.username }}</a> {% if item.profile.first_name or item.profile.last_name %}
+                                ({{ item.profile.user.first_name }} {{ item.profile.user.last_name }}) {% endif %}
                                 {% if isFollower %}
                                 <i class="material-icons">favorite</i>¡Te sigue!{% endif %}</li>
-                                {% if user_profile.status %}
-                                    <li class="status">{{ user_profile.status }}</li>
+                                {% if item.profile.status %}
+                                    <li class="status">{{ item.profile.status }}</li>
                                 {% endif %}
                         </ul>
                         <ul class="profile-items">
                             <li>
-                                <a href="/followers/{{ user_profile.user.username }}"><b
-                                id="followers-stats" class="blue-text">{% if followers %}{{ followers|intword }}{% else %}0{% endif %}</b> Seguidores</a>
+                                <a href="/followers/{{ item.profile.user.username }}"><b
+                                id="followers-stats" class="blue-text">{% if item.followers %}{{ item.followers|intword }}{% else %}0{% endif %}</b> Seguidores</a>
                             </li>
                             <li>
                                 <a id="likes"
-                                href="{% url "user_profile:like_list" username=user_profile.user.username %}"><b class="likes-number blue-text">{% if n_likes %}{{ n_likes|intword }}{% else %}0{% endif %}</b>
+                                href="{% url "user_profile:like_list" username=item.profile.user.username %}"><b class="likes-number blue-text">{% if item.likes %}{{ item.likes|intword }}{% else %}0{% endif %}</b>
                                 Me gusta
                                 </a>
                             </li>
                             <li>
                                 <a class="to_gallery"
-                                href="/multimedia/{{ user_profile.user.username }}/"><b class="blue-text">{{ photos|add:videos|intword }}</b> Fotos y vídeos</a>
+                                href="/multimedia/{{ item.profile.user.username }}/"><b class="blue-text">{{ item.photos|add:item.videos|intword }}</b> Fotos y vídeos</a>
                             </li>
                             <li>
-                                {% if profile_interests %}
+                                {% if item.tags %}
                                 <div class="interests tooltipped" data-position="bottom"
                                 data-username="{{ user_profile.user.username }}"
                                 data-tooltip="">
-                                    {% for i in profile_interests %}
-                                    <a class="blue-text" href="{% url "user_profile:category-search" option="all" %}?q={{ i }}"><b>#{{ i }}</b></a>
+                                    {% for i in item.tags %}
+                                        <a class="blue-text" href="{% url "user_profile:category-search" option="all" %}?q={{ i.tag.name }}"><b>#{{ i.tag.name }}</b></a>
                                     {% endfor %}
-                                    {% with profile_interests|length as profile_interest_returned %}
-                                        {% if profile_interest_returned < profile_interests_total %}
-                                            +{% reduce profile_interests_total profile_interest_returned %}
-                                        {% endif %}
-                                    {% endwith %}
                                 </div>
                             {% endif %}
                             </li>
+                            <li class="divider"></li>
+                            <li>
+                                <p><b>{{ item.exp|intword }} XP</b></p>
+                                <p>{{ item.last_award|truncatechars_html:"150" }}</p>
+                            </li>
                         </ul>
                     </div>
+            </div>
             </div>
